# lylex

./: .gitignore  LilyLexer.x  README.md  lylex.cabal
src/: Main.hs
src/Music/: LilyLexer.x
test/Music/: LilyLexerSpec.hs
